test/Fail/Issue1698-postulate.agda
postulate
  foo = Foo

-- Error message is:
-- A postulate block can only contain type signatures or instance blocks
