test/Fail/Issue1698-postulate.err
Issue1698-postulate.agda:1,1-2,12: error: [Syntax.WrongContentBlock]
A 'postulate' block can only contain type signatures, possibly
under keywords 'instance' and 'private'
